--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#app-binding-name=exceptions-out-0
 logging.level.telran=debug
 server.port=0
 spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
@@ -8,8 +7,4 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 
 spring.kafka.consumer.auto-offset-reset=earliest
 
-spring.cloud.stream.bindings.getAnalyzerBean-in-0.destination=65c0auoi-default
-spring.cloud.stream.bindings.getAnalyzerBean-in-0.group=65c0auoi-initial-logs
-spring.cloud.stream.source=logs;exceptions
-spring.cloud.stream.bindings.logs-out-0.destination=65c0auoi-logs-validated
-spring.cloud.stream.bindings.exceptions-out-0.destination=65c0auoi-exceptions
+spring.cloud.stream.bindings.random_logs_provider-out-0.destination=65c0auoi-default
