--- a/logs-bugs-reporter/logs-bugs-reporter-back-office/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-reporter-back-office/pom.xml
@@ -17,7 +17,11 @@
   <artifactId>logs-bugs-exceptions-handler</artifactId>
   <version>0.0.1</version>
   </dependency>
-  
+  <dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
   <dependency>
   <groupId>com.h2database</groupId>
   <artifactId>h2</artifactId>
