--- a/logs-bugs-reporter/logs-info-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-info-back-office/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-app-population-enable=true
-app-number-logs=100000
 logging.level.telran=debug
+app-population-enable=false
+app-number-logs=100000
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
+server.port=8081
