--- a/logs-bugs-reporter/logs-bugs-reporter-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-reporter-back-office/src/main/resources/application.properties
@@ -5,15 +5,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/programmers_artifacts_bug
 spring.datasource.username=postgres
 spring.datasource.password=233101
 #"create" each launch of the application will create new tables
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.datasource.initialization-mode=always
 #############################################################
-server.port=8080
-#####################################################
-populate-db:true
-names=Moshe1,Moshe2,Moshe3,Moshe4,Moshe5,Moshe6,Moshe7,Moshe8,Moshe9,Moshe10,Moshe11,Moshe12,Moshe13,Moshe14,Moshe15,Moshe16,Moshe17
-artifacts=authentication,authorization,class1,class2,class3,class4,class5,class6,class7,class8,class9,class10,class11,class12,class13,class14,class15,class16,class17,class18,class19,class20
-#####################################################
+server.port=8282
+app-integration-test-enable=true
+app-mail-account=logs.bugs.reporter
