--- a/logs-bugs-reporter/logs-bugs-email-provider/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-email-provider/pom.xml
@@ -14,7 +14,11 @@
 			<groupId>telran.logs.bugs</groupId>
 			<artifactId>logs-bugs-jpa-entities</artifactId>
 			<version>0.0.1</version>
-
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
