--- a/logs-bugs-reporter/logs-bugs-openning/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-openning/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/programmers_artifacts_bug
 spring.datasource.username=postgres
 spring.datasource.password=233101
 #"create" each launch of the application will create new tables
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
