--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="5YGnUuvAvVF4_1XXZXdNT4KXA2bydtcm";
 
 spring.kafka.consumer.auto-offset-reset=earliest
-
+spring.cloud.stream.poller.fixed-delay=300
 spring.cloud.stream.bindings.random_logs_provider-out-0.destination=65c0auoi-default
