--- a/logs-bugs-reporter/logs-bugs-assigner-mail-provider/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-assigner-mail-provider/pom.xml
@@ -6,4 +6,12 @@
     <version>0.0.1</version>
   </parent>
   <artifactId>logs-bugs-assigner-mail-provider</artifactId>
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
