--- a/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.telran=debug
 logging.level.org=warn
 logging.level.de=warn
 
-server.port=0
+
 spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
@@ -12,3 +12,4 @@ spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.cloud.stream.bindings.getLogDtoConsumer-in-0.destination=65c0auoi-logs-validated
 spring.cloud.stream.bindings.getLogDtoConsumer-in-0.group=65c0auoi-db-populator
+spring.data.mongodb.uri=mongodb+srv://root:12345.com@cluster0.g9m0l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
