--- a/logs-bugs-reporter/logs-info-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-info-back-office/src/main/resources/application.properties
@@ -3,4 +3,4 @@ app-population-enable=false
 app-number-logs=100000
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
-server.port=8081
+spring.data.mongodb.uri=mongodb+srv://root:12345.com@cluster0.g9m0l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
