--- a/logs-bugs-reporter/logs-bugs-email-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-email-provider/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8284
 logging.level.telran=debug
 #################################################
 #Configurationworking with JPA Postresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/programmers_artifacts_bugs
-spring.datasource.username=postgres
-spring.datasource.password=233101
+spring.datasource.url=jdbc:postgresql://ec2-52-6-178-202.compute-1.amazonaws.com:5432/d9ag2ogd80utlp
+spring.datasource.username=dfrrdppooaqrje
+spring.datasource.password=${PG_HEROKU_PASSWORD}
 #"create" each launch of the application will create new tables
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
