--- a/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-db-populator/src/main/resources/application.properties
@@ -6,10 +6,9 @@ logging.level.de=warn
 spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="5YGnUuvAvVF4_1XXZXdNT4KXA2bydtcm";
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="${KAFKA_PASSWORD}";
 
 spring.kafka.consumer.auto-offset-reset=earliest
-
 spring.cloud.stream.bindings.getLogDtoConsumer-in-0.destination=65c0auoi-logs-validated
 spring.cloud.stream.bindings.getLogDtoConsumer-in-0.group=65c0auoi-db-populator
-spring.data.mongodb.uri=mongodb+srv://root:12345.com@cluster0.g9m0l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.yc57z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
