--- a/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-analyzer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=0
 spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="5YGnUuvAvVF4_1XXZXdNT4KXA2bydtcm";
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password=${KAFKA_PASSWORD};
 
 spring.kafka.consumer.auto-offset-reset=earliest
 
