--- a/logs-bugs-reporter/logs-bugs-openning/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-openning/pom.xml
@@ -64,4 +64,12 @@
   		</snapshots>
   	</repository>
   </repositories>
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
