--- a/logs-bugs-reporter/logs-bugs-reporter-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-reporter-back-office/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 logging.level.telran=debug
+server.port=8282
 #################################################
 #Configurationworking with JPA Postresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/programmers_artifacts_bugs
-spring.datasource.username=postgres
-spring.datasource.password=233101
+spring.datasource.url=jdbc:postgresql://ec2-52-6-178-202.compute-1.amazonaws.com:5432/d9ag2ogd80utlp
+spring.datasource.username=dfrrdppooaqrje
+spring.datasource.password=${PG_HEROKU_PASSWORD}
 #"create" each launch of the application will create new tables
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.datasource.initialization-mode=always
 #############################################################
-server.port=8282
-app-integration-test-enable=true
-app-mail-account=logsbugsreporter
+
