--- a/logs-bugs-reporter/logs-provider/pom.xml
+++ b/logs-bugs-reporter/logs-provider/pom.xml
@@ -19,7 +19,11 @@
 			<artifactId>logs-bugs-random</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>telran.logs.bugs</groupId>
+			<artifactId>logs-bugs-reporter-back-office</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter</artifactId>
@@ -57,4 +61,12 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
