--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 logging.level.telran=debug
+app-integration-test-enable=true
+app-mail-account=logsbugsreporter
+#Configurationworking with JPA Postresql
+spring.datasource.url=jdbc:postgresql://ec2-52-6-178-202.compute-1.amazonaws.com:5432/d9ag2ogd80utlp
+spring.datasource.username=dfrrdppooaqrje
+spring.datasource.password=${PG_HEROKU_PASSWORD}
+#"create" each launch of the application will create new tables
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.datasource.initialization-mode=always
+#############################################################
+
 server.port=0
 spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="5YGnUuvAvVF4_1XXZXdNT4KXA2bydtcm";
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="${KAFKA_PASSWORD}";
 
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.cloud.stream.poller.fixed-delay=300
+spring.cloud.stream.poller.fixed-delay=500
 spring.cloud.stream.bindings.random_logs_provider-out-0.destination=65c0auoi-default
