--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.cloud.stream.poller.fixed-delay=500
 spring.cloud.stream.bindings.random_logs_provider-out-0.destination=65c0auoi-default
+spring.datasource.hikari.maximum-pool-size=4
