--- a/logs-bugs-reporter/logs-provider/pom.xml
+++ b/logs-bugs-reporter/logs-provider/pom.xml
@@ -21,9 +21,10 @@
 		</dependency>
 		<dependency>
 			<groupId>telran.logs.bugs</groupId>
-			<artifactId>logs-bugs-reporter-back-office</artifactId>
+			<artifactId>logs-bugs-jpa-entities</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter</artifactId>
@@ -39,6 +40,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
 		</dependency>
+		<dependency>
+  	<groupId>org.postgresql</groupId>
+  	<artifactId>postgresql</artifactId>
+  	<scope>runtime</scope>
+  </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -60,8 +66,7 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-	</repositories>
-	  <build>
+	</repositories><build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
