--- a/logs-bugs-reporter/logs-bugs-assigner-mail-provider/src/test/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-assigner-mail-provider/src/test/resources/application.properties
@@ -1,2 +1,8 @@
 app-assigner-mail=assigner@gmail.com
 logging.level.telran=debug
+
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=false
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
