--- a/logs-bugs-reporter/logs-bugs-email-notifier/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-email-notifier/pom.xml
@@ -32,6 +32,14 @@
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
   <groupId>com.icegreen</groupId>
   <artifactId>greenmail-junit5</artifactId>
   <version>1.6.2</version>
