--- a/logs-bugs-reporter/logs-bugs-email-notifier/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-email-notifier/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 logging.level.telran=debug
-app-url-assigner-mail=http://assigner-email-provider:8283
-app-url-artifact-mail=http://programmer-email-provider:8284
 server.port=0
 spring.kafka.bootstrap-servers=rocket-01.srvs.cloudkafka.com:9094,rocket-02.srvs.cloudkafka.com:9094,rocket-03.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="${KAFKA_PASSWORD}";
-
 spring.kafka.consumer.auto-offset-reset=earliest
-
 spring.cloud.stream.bindings.getExceptionsConsumer-in-0.destination=65c0auoi-exceptions
 spring.cloud.stream.bindings.getExceptionsConsumer-in-0.group=65c0auoi-bugs-email-notifier
 
@@ -19,3 +15,7 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.smtp.debug=true
+
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
