--- a/logs-bugs-reporter/logs-bugs-email-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-email-provider/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.datasource.initialization-mode=always
 #############################################################
+spring.datasource.hikari.maximum-pool-size=2
+
+#Configuration for eureka client
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+spring.application.name=programmer-email-provider
