--- a/logs-bugs-reporter/logs-bugs-reporter-back-office/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-reporter-back-office/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.datasource.initialization-mode=always
 #############################################################
-
+spring.datasource.hikari.maximum-pool-size=2
 
