--- a/logs-bugs-reporter/logs-provider/pom.xml
+++ b/logs-bugs-reporter/logs-provider/pom.xml
@@ -66,5 +66,12 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-	</repositories>
+	</repositories><build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
