--- a/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-provider/src/main/resources/application.properties
@@ -7,18 +7,17 @@ spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="65c0auoi" password="${KAFKA_PASSWORD}";
 
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.datasource.hikari.maximum-pool-size=3
 spring.cloud.stream.bindings.random_logs_provider-out-0.destination=65c0auoi-default
 #################################################
 #Configurationworking with JPA Postresql
-spring.datasource.url=jdbc:postgresql://ec2-52-6-178-202.compute-1.amazonaws.com:5432/d9ag2ogd80utlp
-spring.datasource.username=dfrrdppooaqrje
+spring.datasource.url=jdbc:postgresql://ec2-18-233-83-165.compute-1.amazonaws.com:5432/dd4l25td0s636i
+spring.datasource.username=tohtjdatkfacgn
 spring.datasource.password=${POSTGRES_PASSWORD}
 #"create" each launch of the application will create new tables
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
-spring.datasource.initialization-mode=always
 #############################################################
+spring.datasource.hikari.maximum-pool-size=2
 
