--- a/logs-bugs-reporter/docker-compose.yml
+++ b/logs-bugs-reporter/docker-compose.yml
@@ -42,8 +42,6 @@ services:
       - POSTGRES_PASSWORD=643aceb9dae35f7d22e4fd7b4ebdc02e7290a04808c903c8477ed988b1a3a985
       - KAFKA_PASSWORD=5YGnUuvAvVF4_1XXZXdNT4KXA2bydtcm
   reporter-back-office:
-    ports:
-      - "8282:8282"
     build:
       logs-bugs-reporter-back-office
     mem_limit: 350m
@@ -59,14 +57,27 @@ services:
       - MONGO_PASSWORD=12345.com
       - KAFKA_PASSWORD=5YGnUuvAvVF4_1XXZXdNT4KXA2bydtcm
   info-back-office:
-    ports:
-      - "8383:8080"
     build:
        logs-info-back-office
     mem_limit: 350m
     mem_reservation: 100M
     environment:
       - MONGO_PASSWORD=12345.com
+  accounts-provider:
+    build:
+       logs-bugs-accounts-provider
+    mem_limit: 350m
+    mem_reservation: 100M
+    environment:
+      - MONGO_PASSWORD=12345.com
+  gateway:
+    ports:
+      - "9191:9191"
+    build:
+       logs-bugs-gateway
+    mem_limit: 350m
+    mem_reservation: 100M
+  
 
 
   
