--- a/logs-bugs-reporter/logs-bugs-accounts-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-accounts-provider/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8787
 ########################################
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=accounts-provider
 ########################################
 management.endpoints.web.exposure.include=*
