--- a/logs-bugs-reporter/logs-bugs-gateway/src/main/resources/application-docker.properties
+++ b/logs-bugs-reporter/logs-bugs-gateway/src/main/resources/application-docker.properties
@@ -1,1 +1,4 @@
 app-localhost=false
+###################################################
+#For discovery client of load balancing
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
