--- a/logs-bugs-reporter/logs-bugs-accounts-provider/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-accounts-provider/pom.xml
@@ -1,51 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>telran.logs.bugs</groupId>
-		<artifactId>logs-bugs-reporter</artifactId>
-		<version>0.0.1</version>
-	</parent>
-	<artifactId>logs-bugs-accounts-provider</artifactId>
-	<name>logs-bugs-accounts-provider</name>
-	<description>Provids active accounts from MongoDB throu REST</description>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>telran.logs.bugs</groupId>
-			<artifactId>log-bugs-dto</artifactId>
-			<version>0.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>telran.logs.bugs</groupId>
-			<artifactId>logs-bugs-exceptions-handler</artifactId>
-			<version>0.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-	</dependencies>
-	<build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>telran.logs.bugs</groupId>
+    <artifactId>logs-bugs-reporter</artifactId>
+    <version>0.0.1</version>
+  </parent>
+  <artifactId>logs-bugs-accounts-provider</artifactId>
+  <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -53,15 +14,37 @@
 			</plugin>
 		</plugins>
 	</build>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.springframework.cloud</groupId>
+  		<artifactId>
+  			spring-cloud-starter-netflix-eureka-client
+  		</artifactId>
+  	</dependency>
+  	<dependency>
+  	<groupId>org.springframework.boot</groupId>
+  	<artifactId>spring-boot-starter-data-mongodb</artifactId>
+  	</dependency>
+  	<dependency>
+  	<groupId>telran.logs.bugs</groupId>
+    <artifactId>log-bugs-accounts-mongodb</artifactId>
+    <version>0.0.1</version>
+  	</dependency>
+  	<dependency>
+  	<groupId>telran.logs.bugs</groupId>
+    <artifactId>log-bugs-dto</artifactId>
+    <version>0.0.1</version>
+  	</dependency>
+  </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.springframework.cloud</groupId>
+  			<artifactId>spring-cloud-dependencies</artifactId>
+  			<version>2020.0.2</version>
+  			<type>pom</type>
+  			<scope>import</scope>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
