--- a/logs-bugs-reporter/logs-bugs-accounts-provider/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-accounts-provider/src/main/resources/application.properties
@@ -1,15 +1,8 @@
+server.port=0
 logging.level.telran=debug
-logging.level.org=warn
-logging.level.de=warn
-server.port=8787
-########################################
-eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=accounts-provider
-########################################
-management.endpoints.web.exposure.include=*
-management.endpoint.shutdown.enabled=true
-###########################################
-spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.yc57z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-########################################
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:docker}
+spring.data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.hoieg.mongodb.net/logsDatabase?retryWrites=true&w=majority
