--- a/logs-bugs-reporter/logs-bugs-email-notifier/pom.xml
+++ b/logs-bugs-reporter/logs-bugs-email-notifier/pom.xml
@@ -21,6 +21,11 @@
   	<version>0.0.1</version>
   	</dependency>
   	<dependency>
+  	<groupId>telran.logs.bugs</groupId>
+  	<artifactId>logs-bugs-loadbalancer</artifactId>
+  	<version>0.0.1</version>
+  	</dependency>
+  	<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
 			<scope>test</scope>
