--- a/logs-bugs-reporter/logs-bugs-gateway/src/main/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-gateway/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-server.port=9191
-#########################################################################
-app-services-allowed=reporter-back-office:8484,logs-info-back-office:8282
-app-localhost=true
-#########################################################################
 logging.level.telran=debug
-logging.level.org=warn
-logging.level.de=warn
-#########################################################################
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+server.port=9090
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:docker}
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
