--- a/logs-bugs-reporter/logs-bugs-reporter-back-office/Dockerfile
+++ b/logs-bugs-reporter/logs-bugs-reporter-back-office/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:14.0.2
+EXPOSE 8282
 ADD ./target/logs-bugs-reporter-back-office-0.0.1.jar app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
