--- a/logs-bugs-reporter/logs-bugs-gateway/src/test/resources/application.properties
+++ b/logs-bugs-reporter/logs-bugs-gateway/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.telran=debug
+app-seconds-in-unit=2
 
-server.port=9090
 
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
